--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,16 @@ main {
 
 
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
+ 
+}
+
+.nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: orange;
+    min-height: 80%;
+    padding-right: 8rem;
 }
 
 ul {
@@ -23,7 +28,7 @@ ul {
 }
 
 li {
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 section {
