Fixing type errors on header

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 /* TODO:
      fix nav icon sizes
      fix blur and darken background on open nav
-     fix arrow up/down on arrow2
+     fix error on header.tsx(id might be null
 
 
 
