--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 /* TODO:
      fix nav icon sizes
      fix blur and darken background on open nav
-     fix error on header.tsx(id might be null
+     fix error on header.tsx(id might be null)
 
 
 
@@ -55,6 +55,7 @@ header {
 
 .icon_menu {
     max-height: 1rem;
+    cursor: pointer;;
 }
 
 .nav {
@@ -91,10 +92,12 @@ ul {
 
 li {
     padding-block: 0.5rem;
+    cursor: pointer;
 }
 
 summary {
     display: inline-block;
+    cursor: pointer;
 }
 
 .details_open {
@@ -135,6 +138,10 @@ summary {
     padding-block: 0.5rem;
     padding-inline: 1rem;
     min-width: 80%;
+    cursor: pointer;
+}
+
+.login {
     cursor: pointer;
 }
 
@@ -180,4 +187,54 @@ footer {
 
 .footer_logo {
     max-width: 18%;
+}
+
+@media(min-width: 50rem) {
+
+    main {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+    }
+
+    header {
+        grid-column: 1/3;
+    }
+
+    section {
+        grid-column: 2/3;
+    }
+
+    article {
+        grid-column: 1/1;
+        grid-row: 2/2;
+        padding-top: 10rem;
+    }
+
+    .visually-hidden {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        clip: auto;
+        clip-path: none;
+        height: auto;
+        overflow: visible;
+        position: absolute;
+        top: -1.2rem;
+        left: 8rem;
+        white-space: nowrap;
+        padding: 0;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 3.3rem;
+    }
+
+    .icon_menu {
+        display: none;
+    }
 }
