--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,11 @@ p {
     cursor: pointer;
 }
 
+.learn_more:hover {
+    color: var(--black);
+    background-color: var(--white);
+}
+
 footer {
     display: flex;
     flex-direction: row;
@@ -208,33 +213,12 @@ footer {
     article {
         grid-column: 1/1;
         grid-row: 2/2;
-        padding-top: 10rem;
-    }
-
-    .visually-hidden {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        clip: auto;
-        clip-path: none;
-        height: auto;
-        overflow: visible;
-        position: absolute;
-        top: -1.2rem;
-        left: 8rem;
-        white-space: nowrap;
-        padding: 0;
-    }
-
-    ul {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        gap: 3.3rem;
+        /* padding-top: 10rem; */
+        margin-top: 8rem;
     }
 
     .icon_menu {
         display: none;
     }
+
 }
