--- a/src/App.css
+++ b/src/App.css
@@ -198,12 +198,19 @@ footer {
 
     main {
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
         grid-template-rows: auto auto;
+        gap: 3rem;
+        padding-inline: 2rem;
     }
 
     header {
         grid-column: 1/3;
+    }
+
+    .inline_nav {
+        display: inline;
+        background-color: orange;
     }
 
     section {
@@ -213,8 +220,14 @@ footer {
     article {
         grid-column: 1/1;
         grid-row: 2/2;
-        /* padding-top: 10rem; */
-        margin-top: 8rem;
+        justify-content: center;
+        /* padding-left: 3rem; */
+        /* margin-left: 5rem; */
+        /* max-width: 57%; */
+    }
+
+    h2 {
+        font-size: 4rem;
     }
 
     .icon_menu {
