Fixing details/summary for desktop layout

--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,7 @@ footer {
         justify-content: center;
         align-items: self-start;
         padding-inline: 2rem;
+        padding-top: 6rem;
     }
 
     article > p {
@@ -267,6 +268,23 @@ footer {
 
     .icon_menu {
         display: none;
+    }
+
+    .features {
+        display: block;
+        position: absolute;
+        left: -4rem;
+        border: 1px solid transparent;
+        border-radius: 0.5rem;
+        background-color: var(--white);
+        box-shadow: 0.2rem 0.8rem 1.5rem var(--black);
+        padding-inline: 1rem;
+    }
+
+    .company {
+        display: block;
+        position: absolute;
+        left: 9rem;
     }
 
     footer {
