--- a/src/App.css
+++ b/src/App.css
@@ -211,6 +211,7 @@ footer {
         flex-direction: row;
         align-items: center;
         gap: 2rem;
+        width: 120%;
     }
     /* Not sure if this is the best way
        to do this(changing a class) but 
@@ -222,7 +223,7 @@ footer {
         height: auto;
         overflow: visible;
         position: relative;
-        /* top: -4.3rem; */
+        width: 80%;
    }
 
    .icon-close {
@@ -234,14 +235,12 @@ footer {
     gap: 3rem;
    }
 
-   li {
-    /* display: inline-block; */
-   }
-
    .nav-footer {
     display: flex;
     flex-direction: row;
-    padding-left: 4rem;
+    padding-bottom: 0.2rem;
+    /* padding-left: calc(105% - 87%); */
+    padding-left: 20%;
     gap: 4rem;
    }
 
@@ -285,6 +284,11 @@ footer {
         display: block;
         position: absolute;
         left: 9rem;
+        border: 1px solid transparent;
+        border-radius: 0.5rem;
+        background-color: var(--white);
+        box-shadow: 0.2rem 0.8rem 1.5rem var(--black);
+        padding-inline: 1rem;
     }
 
     footer {
