Fixing nav position on responsive

--- a/src/App.css
+++ b/src/App.css
@@ -211,7 +211,6 @@ footer {
         flex-direction: row;
         align-items: center;
         gap: 2rem;
-        width: 120%;
     }
     /* Not sure if this is the best way
        to do this(changing a class) but 
@@ -223,7 +222,6 @@ footer {
         height: auto;
         overflow: visible;
         position: relative;
-        width: 80%;
    }
 
    .icon-close {
@@ -236,12 +234,11 @@ footer {
    }
 
    .nav-footer {
-    display: flex;
     flex-direction: row;
     padding-bottom: 0.2rem;
-    /* padding-left: calc(105% - 87%); */
-    padding-left: 20%;
     gap: 4rem;
+    /* padding-left: 35vw; */
+    padding-left: calc(35vw - 10vw);
    }
 
     section {
