--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@
 }
 
 /* TODO:
-     fix nav icon sizes
      fix blur and darken background on open nav
      fix error on header.tsx(id might be null)
 
@@ -154,6 +153,7 @@ article {
     flex-direction: column;
     align-items: center;
     padding: 1rem;
+    text-align: center;
 }
 
 h2 {
@@ -194,14 +194,23 @@ footer {
     max-width: 18%;
 }
 
+.blur {
+    background-color: black;
+    /* filter: blur(10px); */
+}
+
+.blur > section {
+    filter: blur(10px);
+}
+
 @media(min-width: 50rem) {
 
     main {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 50% 50%;
         grid-template-rows: auto auto;
         gap: 3rem;
-        padding-inline: 2rem;
+        padding-inline: 4rem;
     }
 
     header {
@@ -253,6 +262,7 @@ footer {
         align-items: self-start;
         padding-inline: 2rem;
         padding-top: 6rem;
+        text-align: left;
     }
 
     article > p {
@@ -290,7 +300,7 @@ footer {
     }
 
     footer {
-        grid-column: 1/1;
+        grid-column: 1/3;
     }
 
 }
@@ -304,6 +314,12 @@ footer {
         gap: 2rem;
         flex-wrap: wrap;
         padding-top: 1rem;
+        padding-right: 6rem;
+    }
+
+    .div_logo {
+        padding-top: 0;
+        margin-bottom: 2.5rem;
     }
 }
 
@@ -313,5 +329,10 @@ footer {
         gap: 4rem;
         flex-wrap: nowrap;
         padding-top: 0;
+    }
+
+    .div_logo {
+        padding-bottom: 0;
+        padding-top: 2rem;
     }
 }
