--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,6 @@
     --fw-700: 700;
 }
 
-/* TODO:
-     fix blur and darken background on open nav
-     fix error on header.tsx(id might be null)
-
-
-
-*/
-
 main {
     display: flex;
     flex-direction: column;
@@ -36,8 +28,6 @@ main {
     font-size: var(--font-size);
     font-family: var(--ff);
     font-weight: var(--fw);
-    /* background-color: black; */
-    /* filter: blur(8px); */
 }
 
 header {
@@ -65,6 +55,7 @@ header {
     min-width: 15rem;
     background-color: white;
     padding-block: 1rem;
+    z-index: 1;
 }
 
 .visually-hidden {
@@ -200,6 +191,10 @@ footer {
 }
 
 .blur > section {
+    filter: blur(10px);
+}
+
+.blur > article  {
     filter: blur(10px);
 }
 
